--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "jest": "^27.5.1",
     "supertest": "^6.2.2"
   }
