--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "test": "jest --watchAll"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "http-errors": "^2.0.0",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
